--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,17 @@ body {
 	width: 100px;
 }
 
-h1 {
+.heading {
 	margin-bottom: 30px;
 	margin-top: 20px;
-	font-size: 20px;
+	font-size: 40px;
 
 }
  
 p {
 	margin-bottom: 16px;
+}
+
+.main-section {
+	padding: 10px;
 }
